--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="form">
         <div class="form__container">
             <h1>Оставьте свои контакты.</h1>
-            <p>Поможем подобрать модель. Выбрать удобный вариант доставки и установки. Гарантия возврата денег.</p>
+            <p>Поможем подобрать модель. <br> Выбрать удобный вариант доставки и установки. <br> Гарантия возврата денег.</p>
         <form>
             <div class="form__group">
                 <label for="name">Ваше имя</label>
